--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <button onclick="deleteText()">❌</button>
             </label>
             <div class="basic-buttons">
-                <button onclick="onChangeFontSize(this)" >increase</button>
-                <button onclick="onChangeFontSize(this)">decrease</button>
+                <button onclick="onChangeFontSize(this)">+</button>
+                <button onclick="onChangeFontSize(this)">-</button>
                 <button onclick="onSwicthText()">🔄</button>
                 <label>
                     <input type="color" id="new-color" onchange="onChooseColor(this.value)">
