--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button name="add-text" type="submit" onclick="onSubmitText()"></button>
                 </label>
                 <div class="basic-buttons">
-                    <button name="delete-button" onclick="clearCanvas()"></button>
+                    <button name="delete-button" onclick="onRemoveText()"></button>
                     <button name="swich-button" onclick="onSwicthText()"></button>
                     <button name="font+" onclick="onChangeFontSize(this)">A+</button>
                     <button name="font-" onclick="onChangeFontSize(this)">A-</button>                   
